discussion/kv_engine/174919/174919_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52134: Move MagmaKVStore::scan 'core' to a function

Move the core of the scanning loop to its own function, this
will be re-use by BySeqno and ById scans.

Change-Id: I73967c5db5abe527e1a95a92442192df76c558ab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-17 13:43:29.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-17 14:04:49.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46175/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(1888): error C2440: "return": cannot convert from "ScanStatus" to "MagmaScanResult" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46175/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17527/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1888:20: error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult" [clang-diagnostic-error]
            return ScanStatus::Failed;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-scan-result.h:19:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "ScanStatus" to "const MagmaScanResult &" for 1st argument
struct MagmaScanResult {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-scan-result.h:19:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "ScanStatus" to "MagmaScanResult &&" for 1st argument
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-scan-result.h:29:5: note: candidate constructor not viable: no known conversion from "ScanStatus" to "MagmaScanResult::Status" for 1st argument
    MagmaScanResult(Status s) : code(s) {
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17527/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1888:20:
error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17527/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38789/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1888:20:
error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38789/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7136/ : FAILURE

Compile error at [2022-05-17T13:52:56.092Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1888:20:
error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18502/ : FAILURE

Compile error at [2022-05-17T13:47:41.249Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1888:20:
error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18502/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19638/ : FAILURE

Compile error at [2022-05-17T13:56:12.195Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1888:32:
error: could not convert ?ScanStatus::Failed? from ?ScanStatus? to ?MagmaScanResult?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19638/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27695/ : FAILURE

Compile error at [2022-05-17T14:02:33.664Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1888:20:
error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27695/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7234/ : FAILURE

Compile error at [2022-05-17T13:46:16.921Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1888:32:
error: could not convert ?ScanStatus::Failed? from ?ScanStatus? to ?MagmaScanResult?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7234/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20316/ : FAILURE

Compile error at [2022-05-17T13:59:22.726Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1888:20:
error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20316/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16547/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19290/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
